BusOne/src/objects/Medical_Inquiry_Fulfillment_vod__c.object
<CustomObject>
    <description>Captures the information from the initiating Medical Inquiry request, the current Assignee, and the Fulfillment Status.</description>
    <fields>
        <fullName>Account_Display_Name_vod__c</fullName>
        <description>Veeva internal field that ensures proper display of Account Name after account merges or territory realignments</description>
        <label>Account Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account of the associated Medical Inquiry request.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Inquiry Fulfillments</relationshipLabel>
        <relationshipName>Medical_Inquiry_Fulfillment_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>The Address Line 1 of the Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>The Address Line 2 of the Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User currently assigned to respond to the Medical Inquiry Fulfillment record.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Inq_Fulfillment_Assigned_To_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Medical Inquiry Fulfillments</relationshipLabel>
        <relationshipName>Medical_Inquiry_Fulfillment_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>The City of the Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>The Country of the Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_vod__c</fullName>
        <description>The selected Delivery Method of the associated Medical Inquiry request.</description>
        <label>Delivery Method</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>The Email Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>Veeva internal field that ensures proper synchronization after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number_vod__c</fullName>
        <description>The Fax Number captured for fulfillment of the assoicated Medical Inquiry request.</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Initiated_By_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that created the associated Medical Inquiry request.</description>
        <label>Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Inquiry_Fulfillment_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiated_Datetime_vod__c</fullName>
        <description>The Date and time the Medical Inquiry fulfillment record was created via the associated Medical Inquiry Request.</description>
        <label>Initiated Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inquiry_Text_vod__c</fullName>
        <description>The Inquiry Text captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>Inquiry Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Medical Inquiry request that the fulfillment record was created from.</description>
        <label>Medical Inquiry</label>
        <referenceTo>Medical_Inquiry_vod__c</referenceTo>
        <relationshipLabel>Medical Inquiry Fulfillments</relationshipLabel>
        <relationshipName>Medical_Inquiry_Fulfillment_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Medical Inquiry Fulfillment record was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field to aid in synchronization and allow for the creation of Medical Inquiry Fulfillment records on the offline platforms.</description>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Number_vod__c</fullName>
        <description>The Phone Number captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <description>The Product for which the Inquiry Text pertains to on the associated Medical Inquiry request.</description>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Delivery_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents whether the fulfillment of the associated Medical Inquiry request was requested as a rush.</description>
        <label>Rush Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>The State of the Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The state of the Medical Inquiry Fulfillment record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_vod</fullName>
                </value>
                <value>
                    <fullName>Assigned_vod</fullName>
                </value>
                <value>
                    <fullName>Completed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>The Zip Code of the Address captured for fulfillment of the associated Medical Inquiry request.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Medical Inquiry Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIF-{00000}</displayFormat>
        <label>MI Fulfillment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiry Fulfillments</pluralLabel>
    <recordTypes>
        <fullName>Email_vod</fullName>
        <active>true</active>
        <description>Medical Inquiry Fulfillment record created for an Email delivery method.</description>
        <label>Email_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fax_vod</fullName>
        <active>true</active>
        <description>Medical Inquiry Fulfillment record created for a Fax delivery method.</description>
        <label>Fax_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mail_vod</fullName>
        <active>true</active>
        <description>Medical Inquiry Fulfillment record created for an Urgent Mail or Mail delivery method.</description>
        <label>Mail_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone_vod</fullName>
        <active>true</active>
        <description>Medical Inquiry Fulfillment record created for a Phone delivery method.</description>
        <label>Phone_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>